@@ -10,3 +10,5 @@ texi2html.spec
 check_texinfo.pl
 texi2html-*.tar.gz
 texi2html-*.tar.bz2
+texi2html-*.zip
+translations.pl
