@@ -1,5 +1,10 @@
 2005-02-04  Derek Price  <derek@ximbiot.com>
 
+	* .cvsignore: Add *.zip & translations.pl.
+	* Makefile.am: Make sure translations.pl is built in srcdir.
+
+2005-02-04  Derek Price  <derek@ximbiot.com>
+
 	* configure.ac: Make .zip archives as part of `make dist'.
 	* doc/Makefile.am (texi2html.html): Depend on files in srcdir, not
 	builddir.
@@ -15,7 +20,7 @@
 	old perl. Report from Sven de Vries.
 	* T2h_i18n.pm: remove useless use that prevented to run on IRIX. 
 	Report from ezra peisach.
-	* Tests/*: remove some $Id: ChangeLog,v 1.181 2005/02/04 16:29:56 dprice Exp $ rcs tags
+	* Tests/*: remove some $Id: ChangeLog,v 1.182 2005/02/04 17:14:17 dprice Exp $ rcs tags
 
 2005-02-03  Patrice Dumas  <dumas@centre-cired.fr>
 
